test/libsolidity/syntaxTests/visibility/interface/function_private.sol
interface I {
	function f() private;
}
// ----
// TypeError: (15-36): Functions in interfaces must be declared external.
